fix on mobile devices

--- a/css/ronaldi.css
+++ b/css/ronaldi.css
@@ -39,12 +39,12 @@ body{
 
 @media (max-width: 960px) {
   .card{
-    width: 80%;
+    width: 75%;
       }
 }
 
 @media (max-width: 480px) {
   .card{
-    width: 90%;
+    width: 85%;
       }
 }
